# latent-demand

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
seeds/: initial_sources.json
src/latent_demand/: __init__.py  cli.py  config.py  storage.py
src/latent_demand/analysis/: deduplicator.py  extractor.py  scorer.py
src/latent_demand/analysis/prompts/: extraction.py  scoring.py
src/latent_demand/collectors/: __init__.py  base.py  discovery.py  hackernews.py  reddit.py
src/latent_demand/output/: digest.py  opportunity_brief.py
src/latent_demand/pipeline/: orchestrator.py
