[project]
name = "latent-demand"
version = "0.1.0"
description = "AI agent that discovers latent demand by finding creative hacks and workarounds on social platforms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.52.0",
    "httpx>=0.28.0",
    "praw>=7.8.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "typer>=0.15.0",
]

[project.scripts]
latent-demand = "latent_demand.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/latent_demand"]

[tool.hatch.build.targets.editable]
packages = ["src/latent_demand"]

[tool.pytest.ini_options]
testpaths = ["tests"]
